Bug 198563 - [PATCH] Prevent spa_namespace_lock deadlock caused by spa_import_rootpool()
Summary: [PATCH] Prevent spa_namespace_lock deadlock caused by spa_import_rootpool()
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: CURRENT
Hardware: Any Any
: --- Affects Some People
Assignee: Andriy Gapon
URL:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2015-03-13 16:22 UTC by Fabian Keil
Modified: 2017-12-17 07:12 UTC (History)
2 users (show)

See Also:


Attachments
spa_import_rootpool(): Fix ressource leaks if the pool label is missing (227 bytes, patch)
2015-03-13 16:22 UTC, Fabian Keil
no flags Details | Diff
spa_import_rootpool(): Fix ressource leaks if the pool label is missing (227 bytes, patch)
2015-03-13 16:26 UTC, Fabian Keil
no flags Details | Diff
spa_import_rootpool(): Fix ressource leaks if the pool label is missing (1.17 KB, patch)
2015-03-13 16:28 UTC, Fabian Keil
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Keil 2015-03-13 16:22:41 UTC
Created attachment 154268 [details]
spa_import_rootpool(): Fix ressource leaks if the pool label is missing
Comment 1 Fabian Keil 2015-03-13 16:26:04 UTC
Created attachment 154269 [details]
spa_import_rootpool(): Fix ressource leaks if the pool label  is missing

Once more, with feeling.
Comment 2 Fabian Keil 2015-03-13 16:28:13 UTC
Created attachment 154270 [details]
spa_import_rootpool(): Fix ressource leaks if the pool label is missing

Previously spa_namespace_lock was kept locked which prevented
the system from booting even if the root pool label was actually
found later on. An insignificant amount of memory was leaked as well.

Obtained from: ElectroBSD
Comment 3 commit-hook freebsd_committer 2015-08-24 08:45:41 UTC
A commit references this bug:

Author: avg
Date: Mon Aug 24 08:44:45 UTC 2015
New revision: 287100
URL: https://svnweb.freebsd.org/changeset/base/287100

Log:
  spa_import_rootpool: prevent lock and resource leak

  The lock leak could lead to a deadlock later.

  PR:		198563
  Submitted by:	Fabian Keil <fk@fabiankeil.de>
  MFC after:	1 week

Changes:
  head/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/spa.c
Comment 4 commit-hook freebsd_committer 2015-09-11 13:32:59 UTC
A commit references this bug:

Author: avg
Date: Fri Sep 11 13:32:20 UTC 2015
New revision: 287667
URL: https://svnweb.freebsd.org/changeset/base/287667

Log:
  MFC r287100: spa_import_rootpool: prevent lock and resource leak

  PR:		198563

Changes:
_U  stable/10/
  stable/10/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/spa.c
Comment 5 commit-hook freebsd_committer 2015-09-11 13:33:01 UTC
A commit references this bug:

Author: avg
Date: Fri Sep 11 13:32:56 UTC 2015
New revision: 287668
URL: https://svnweb.freebsd.org/changeset/base/287668

Log:
  MFC r287100: spa_import_rootpool: prevent lock and resource leak

  PR:		198563

Changes:
_U  stable/9/sys/
_U  stable/9/sys/cddl/contrib/opensolaris/
  stable/9/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/spa.c
Comment 6 vali gholami 2017-12-17 07:12:05 UTC
MARKED AS SPAM