MFC r287100: spa_import_rootpool: prevent lock and resource leak

PR:		198563

Former-commit-id: 3be361641ed4cdf68290452149e9da6d1ebf0656